appId: app.bitchsky
---
- runScript:
    file: ../setupServer.js
    env:
      SERVER_PATH: ""
- runFlow:
    file: ../setupApp.yml
- tapOn:
    id: "e2eOpenLoggedOutView"
- tapOn:
    id: "createAccountButton"
- tapOn: "Bluesky Social"
- tapOn:
    id: "customSelectBtn"
- tapOn:
    id: "customServerTextInput"
- inputText: "http://localhost:3000"
- pressKey: Enter
- tapOn:
    id: "doneBtn"
- tapOn:
    id: "emailInput"
- inputText: "example@test.com"
- tapOn:
    id: "passwordInput"
- inputText: "hunter22"
- tapOn:
    # hideKeyboard on ios is borked
    # https://docs.maestro.dev/troubleshooting/known-issues#hidekeyboard-command-is-flaky
    text: "Your account"
- tapOn:
    id: "nextBtn"
- tapOn:
    text: "Not Now"
    optional: true
- inputText: "e2e-test"
- extendedWaitUntil:
    visible:
      id: "handleAvailableCheck"
- tapOn:
    id: "nextBtn"
- assertVisible: "Give your profile a face"
