appId: app.bitchsky
---
- launchApp:
    appId: "app.bitchsky"
    clearState: true
- waitForAnimationToEnd
- tapOn: "http://localhost:8081"
- waitForAnimationToEnd
- extendedWaitUntil:
    visible: "Continue"
- swipe:
    from: "Bluesky"
    direction: DOWN
    duration: 100
- tapOn:
    id: e2eProxyHeaderInput
- inputText: ${output.result}
- pressKey: Enter
